# dupion

./: .gitignore  Cargo.toml  README.md
dupion/: Cargo.toml
dupion/src/: lib.rs  main.rs
dupion/src/dedup/: btrfs.rs  fd.rs  mod.rs
dupion/src/driver/: common.rs  fiemap.rs  mod.rs  platterwalker.rs  uringer.rs
dupion/src/group/: mod.rs
dupion/src/opts/: mod.rs
dupion/src/output/: groups.rs  mod.rs  subsetion.rs  tree.rs  treediff.rs
dupion/src/phase/: mod.rs
dupion/src/process/: mod.rs  treediff.rs  treestat.rs
dupion/src/state/: mod.rs
dupion/src/util/: mod.rs
dupion/src/vfs/: deser.rs  entry.rs  mod.rs
dupion/src/zip/: mod.rs
libarchive-rust/: Cargo.toml
libarchive-rust/src/: lib.rs
libarchive-rust/src/archive/: archive_handle.rs  handle.rs  mod.rs
libarchive-rust/src/entry/: entry.rs  entry_borrowed.rs  entry_owned.rs  mod.rs
libarchive-rust/src/error/: mod.rs
libarchive-rust/src/reader/: builder.rs  file_reader.rs  mod.rs  reader.rs  stream_reader.rs
libarchive-rust/src/writer/: builder.rs  disk.rs  mod.rs  writer.rs
platter-walk/: Cargo.toml  platter-walk.code-workspace
platter-walk/src/: lib.rs
reapfrog/: Cargo.toml
reapfrog/src/: lib.rs
rust-btrfs/: Cargo.toml
rust-btrfs/src/: lib.rs
rust-btrfs/src/compress/: lzo.rs  mod.rs  zlib.rs
rust-btrfs/src/diskformat/: compression.rs  filesystem.rs  misc-old.rs  mod.rs  naked_string.rs  prelude.rs
rust-btrfs/src/diskformat/core/: checksum.rs  dev_item.rs  dev_item_data.rs  device.rs  device_set.rs  file_type.rs  key.rs  label.rs  mmap_device_set.rs  mod.rs  physical_address.rs  root_backup.rs  superblock.rs  superblock_chunk_item.rs  superblock_data.rs  superblock_reserved.rs  superblock_system_chunks.rs  superblock_system_chunks_data.rs  superblock_unused.rs  timestamp.rs  uuid.rs
rust-btrfs/src/diskformat/item/: chunk_item.rs  chunk_item_data.rs  chunk_item_stripe_data.rs  dir_index.rs  dir_item.rs  dir_item_data.rs  dir_item_entry.rs  extent_constants.rs  extent_data.rs  extent_data_constants.rs  extent_data_data.rs  extent_data_ref_data.rs  extent_inline_ref_data.rs  extent_item.rs  extent_item_data.rs  inode_item.rs  inode_item_data.rs  inode_ref.rs  inode_ref_data.rs  inode_ref_entry.rs  internal_item.rs  invalid_item.rs  leaf_item.rs  leaf_item_constants.rs  leaf_item_contents.rs  leaf_item_header.rs  mod.rs  root_backref.rs  root_item.rs  root_item_data.rs  root_ref.rs  root_ref_data.rs  tree_block_info_data.rs  unknown_item.rs
rust-btrfs/src/diskformat/macros/: leaf_item_composite_type_entries.rs  leaf_item_composite_type_implementation.rs  leaf_item_composite_type_iterator.rs  leaf_item_destructure.rs  mod.rs  tree_item_accessor.rs  tree_item_range_accessor.rs
rust-btrfs/src/diskformat/node/: header.rs  internal_node.rs  leaf_node.rs  leaf_node_items.rs  mod.rs  node.rs
rust-btrfs/src/diskformat/tree/: chunk_tree.rs  extent_tree.rs  filesystem_tree.rs  mod.rs  read_tree.rs  root_tree.rs  tree.rs  tree_id.rs  unknown_tree.rs
rust-btrfs/src/linux/: imports.rs  ioctl_wrapper.rs  mod.rs
rust-btrfs/src/linux/ctypes/: ioctl_constants.rs  ioctl_defrag_range_args.rs  ioctl_dev_info_args.rs  ioctl_device_path.rs  ioctl_fiemap.rs  ioctl_fiemap_extent.rs  ioctl_file_dedupe_range.rs  ioctl_file_dedupe_range_info.rs  ioctl_fs_info_args.rs  ioctl_space_args.rs  ioctl_space_info.rs  mod.rs
rust-btrfs/src/linux/operations/: deduplicate.rs  defragment.rs  fiemap.rs  filesystem_info.rs  mod.rs  space_info.rs
rust-btrfs/src/linux/types/: compression_type.rs  dedupe_range.rs  dedupe_range_dest_info.rs  dedupe_range_status.rs  device_info.rs  file_descriptor.rs  filesystem_info.rs  group_profile.rs  group_type.rs  mod.rs  space_info.rs
