[package]
name = "dupion"
version = "0.1.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
anyhow = "1.0"
sha2 = "0.8"
size_format = "1.0"
structopt = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
base64 = "0.12"
libc = "0.2.71"

[dependencies.platter-walk]
path = "../platter-walk"

[dependencies.reapfrog]
path = "../reapfrog"

[dependencies.libarchive]
path = "../libarchive-rust"

[profile.release]
lto = true
codegen-units = 1

#TODO optimize compile times by e.g. opt=0 for derive deps
