[package]
name = "dupion"
version = "0.3.0"
description = "Find duplicate files and folders"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
anyhow = "1.0"
#sha2 = "0.10"
blake3 = "1.3"
size_format = "1.0"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
base64 = "0.13"
libc = ">=0.2.70"
parking_lot = "0.12"
num_cpus = "1.13"
sysinfo = "0.26"
btrfs = { path = "../rust-btrfs" }
rustc-hash = "1.1"
hashbrown = { version = "0.12", default-features = false, features = ["inline-more"] }
atty = "0.2"

[dependencies.maligned]
version = "0.2"
features = ["align-4k"]

[dependencies.platter-walk]
path = "../platter-walk"

[dependencies.reapfrog]
path = "../reapfrog"

[dependencies.libarchive]
path = "../libarchive-rust"

#TODO optimize compile times by e.g. opt=0 for derive deps
