[package]
name = "dupion"
version = "0.5.0"
description = "Find duplicate files and folders"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.74"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
anyhow = "1.0"
#sha2 = "0.10"
blake3 = "1.3"
size_format = "1.0"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"
serde_bytes = "0.11"
serde = "1.0"
serde_derive = "1.0"
base64 = "0.21"
libc = ">=0.2.70"
parking_lot = "0.12"
sysinfo = "0.29"
btrfs = { path = "../rust-btrfs" }
rustc-hash = "1.1"
hashbrown = { version = "0.14", default-features = false, features = ["inline-more", "allocator-api2"] }
zstd = "0.13"
walkdir = "2.5"
glommio = { path = "../../glommio/glommio" }
crossbeam-channel = "0.5"
fiemap = { path = "../../fiemap-rs/fiemap" }
thiserror = "1"
hex = "0.4"

[dev-dependencies]
clap_complete = "4"

# [dependencies.maligned]
# version = "0.2"
# features = ["align-4k"]

[dependencies.platter-walk]
path = "../platter-walk"

[dependencies.reapfrog]
path = "../reapfrog"

[dependencies.libarchive]
path = "../libarchive-rust"

#TODO optimize compile times by e.g. opt=0 for derive deps
