[package]
name = "platter-walk"
version = "0.0.0"
authors = ["The 8472"]
description = "Directory tree traversal optimized for HDDs"
keywords = ["linux", "ext4"]
repository = "https://github.com/the8472/platter-walk"
readme = "README.md"
categories = ["filesystem"]
license = "MPL-2.0"
edition = "2021"

include = [
    "**/*.rs",
    "README.md",
    "LICENCE",
    "Cargo.toml",
]


[dependencies]
btrfs = { path = "../rust-btrfs" }
mnt = "0.3.1"
libc = ">=0.2.70"
rustc-hash = "1"
