[package]
name = "btrfs"
description = "Interface for BTRFS ioctls etc"
license = "MIT"
version = "1.2.2"
edition = "2018"
authors = ["James Pharaoh <james@wellbehavedsoftware.com>"]
include = ["src/**/*.rs", "Cargo.toml", "README.md"]

[dependencies]
byteorder = "1.1"
chrono = "0.4"
crc = "1.8"
flate2 = "0.2"
itertools = "0.10"
lazy_static = "1.4"
libc = "0.2"
memmap = "0.5"
minilzo = "0.2"
nix = "0.23"
output = "0.6"
uuid = "0.8"
